# tech_interview_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/core/: config.py  exceptions.py  logger.py
app/core/interfaces/: __init__.py  embeddings.py  llm.py  vectorstore.py
app/features/chat/api/: router.py
app/features/chat/domain/: docx_repository.py  ingest.py  interview_docx.py  models.py  services.py  vectorization.py
app/features/chat/infrastructure/: qdrant.py
app/features/chat/providers/: ollama.py
app/features/quiz/: __init__.py
app/features/quiz/api/: router.py
app/features/quiz/domain/: models.py  quiz_generator.py  services.py
app/scripts/: __init__.py  ingest_cli.py
app/services/: __init__.py  chat_rag.py  ingest.py  interview_docx.py  llm.py  qdrant_service.py  vectorization.py
docx_data/: ~$terview_questions.docx
prompts/: system_prompt.md
static/: index.html
tests/fixtures/: test_interview_questions.docx
tests/integration/: test_chat_api.py
tests/unit/: test_docx_repository.py  test_session_store.py
