[project]
name = "fastapi-rag"
version = "0.1.0"
description = "FastAPI + Qdrant RAG для подготовки к Python собеседованиям"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.2",
]

[project.scripts]
ingest-interview = "app.scripts.ingest_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]
